[package]
name = "bibterm"
version = "0.1.0"
authors = ["Daniel Hammer <HammerAPI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.57"
serde= { version = "1.0.116", features = ["derive"] }
rayon="1.4.0"
anyhow="1.0.13"
